--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.2.0",
+    "react-animate-height": "^3.2.3",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
     "styled-components": "^6.1.11"
   },
